_build/_log
### Starting build.
# Target: ftest.ml.depends, tags: { debug, extension:ml, file:ftest.ml, ocaml, ocamldep, quiet, traverse }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamldep.opt -modules ftest.ml > ftest.ml.depends
# Target: gfile.mli.depends, tags: { debug, extension:mli, file:gfile.mli, ocaml, ocamldep, quiet, traverse }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamldep.opt -modules gfile.mli > gfile.mli.depends # cached
# Target: graph.mli.depends, tags: { debug, extension:mli, file:graph.mli, ocaml, ocamldep, quiet, traverse }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamldep.opt -modules graph.mli > graph.mli.depends # cached
# Target: graph.cmi, tags: { byte, compile, debug, extension:mli, file:graph.mli, interf, ocaml, quiet, traverse }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamlc.opt -c -g -o graph.cmi graph.mli # cached
# Target: gfile.cmi, tags: { byte, compile, debug, extension:mli, file:gfile.mli, interf, ocaml, quiet, traverse }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamlc.opt -c -g -o gfile.cmi gfile.mli # cached
# Target: Tools.mli.depends, tags: { debug, extension:mli, file:Tools.mli, ocaml, ocamldep, quiet, traverse }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamldep.opt -modules Tools.mli > Tools.mli.depends # cached
# Target: Tools.cmi, tags: { byte, compile, debug, extension:mli, file:Tools.mli, interf, ocaml, quiet, traverse }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamlc.opt -c -g -o Tools.cmi Tools.mli # cached
# Target: ftest.cmo, tags: { byte, compile, debug, extension:cmo, extension:ml, file:ftest.cmo, file:ftest.ml, implem, ocaml, quiet, traverse }
/mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamlc.opt -c -g -o ftest.cmo ftest.ml
+ /mnt/commetud/GEI/OCaml/.opam/4.08.1/bin/ocamlc.opt -c -g -o ftest.cmo ftest.ml
File "ftest.ml", line 35, characters 30-36:
35 |   let () = write_file outfile graph2 in
                                   ^^^^^^
Error: This expression has type int Graph.graph
       but an expression was expected of type string Graph.graph
       Type int is not compatible with type string 
Command exited with code 2.
# Compilation unsuccessful.
